WebSocket: Fix bufferedAmount after WebSocket is closed https://bugs.webkit.org/show_bug.cgi?id=67363

Reviewed by Kent Tamura.

Source/WebCore:

Test: http/tests/websocket/tests/hybi/bufferedAmount-after-close.html (updated)

* websockets/WebSocket.cpp:
(WebCore::WebSocket::send):
(WebCore::WebSocket::getFramingOverhead):
* websockets/WebSocket.h:

LayoutTests:

* http/tests/websocket/tests/hybi/bufferedAmount-after-close-expected.txt:
* http/tests/websocket/tests/hybi/bufferedAmount-after-close.html:
Try to send messages having various lengths to make sure we correctly calculate
the framing overhead.


Canonical link: https://commits.webkit.org/83191@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@94282 268f45cc-cd09-0410-ab3c-d52691b4dbfc